tests/sksl/errors/ArrayConstructorElementCount.glsl
### Compilation failed:

error: 1: invalid arguments to 'float[2]' constructor (expected 2 elements, but found 0)
error: 2: invalid arguments to 'float[2]' constructor (expected 2 elements, but found 1)
error: 4: invalid arguments to 'float[2]' constructor (expected 2 elements, but found 3)
3 errors
